--- a/styles.css
+++ b/styles.css
@@ -66,16 +66,15 @@ body {
 }
 
 #messagebutton{
+    margin-left: 45%;
     font-family: 'Inter';
     height: 10%;
-    width: 6%;
+    width: 8%;
     background-color: #98fbcb;
+    border:2px solid #333333;
+    border-radius: 60px;
 }
 
-#userform {
-    font-family: 'Inter';
-    color: #b2b2b2;
-}
 
 #secretmessage {
     font-family: 'Inter';
@@ -122,7 +121,7 @@ body {
 
 #navbackground {
     background-color: #333333;
-    height: 50px;
+    height: 55px;
     width: 100%;
     border-radius: 5%;
 }
@@ -156,7 +155,6 @@ body {
 
 /* I used the link https://www.w3schools.com/css/css3_mediaqueries.asp and the examples to make these media queries as I have not done these before, please ignore the color scheme I know it may not look the absolute best I did it to clearly show the media queries in an easy way*/
 
-/*This media query makes the page background turn to lightblue if the page width is less than 600 pixels*/
 @media screen and not (min-width: 825px)  {
     .headerprops {
         font-size: 175%;
