--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 /*Some global styles that I wanted to apply to the page to style the page to look a bit nicer*/
 img {
-    align-content: center;
     height: 30%;
     width: 20%;
     border-radius: 5%;
@@ -33,7 +32,7 @@ body {
 
 .headerprops {
     font-family: 'Inter';
-    font-size: 250%;
+    font-size: 220%;
     margin-left: 2.5%;
     margin-right: 2.5%;
 }
@@ -90,6 +89,12 @@ body {
     font-family: 'Inter';
 }
 
+.error {
+    color: red;
+    font-size: 12px;
+    display: block;
+}
+
 
 .ml25 {
     margin-left: 25%;
@@ -125,6 +130,12 @@ body {
     background-color: #98fbcb;
     border:2px solid #333333;
     border-radius: 60px;
+}
+
+#userform {
+    margin-left: 40%;
+    color: #98fbcb;
+    font-family: 'Inter';
 }
 
 
@@ -181,6 +192,7 @@ body {
 #infobackground {
     border-radius: 5%;
     bottom: 0%;
+    margin-top: 30vh;
     background-color: #333333;
     height: 30px;
     width: 100%;
